plugins {
  id 'java'
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainClass = 'org.example.editor.HelloApplication'
}

run {
  jvmArgs = [
    '--add-modules', 'javafx.controls,javafx.fxml',
    '-Dprism.verbose=true',
    '-Djavafx.platform=mac'
  ]
}

javafx {
  version = '21.0.2'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
useJUnitPlatform()}
